# contracts/openapi/openapi.json
@@ -1,30 +1,18 @@
 {
   "components": {
     "schemas": {
-      "AuthenticatedPrincipalResponse": {
+      "PlannerPrincipalResponse": {
         "properties": {
-          "issuer": {
-            "title": "Issuer",
-            "type": "string"
-          },
-          "scopes": {
-            "items": {
-              "type": "string"
-            },
-            "title": "Scopes",
-            "type": "array"
-          },
-          "subject": {
-            "title": "Subject",
+          "planner_id": {
+            "format": "uuid",
+            "title": "Planner Id",
             "type": "string"
           }
         },
         "required": [
-          "issuer",
-          "subject",
-          "scopes"
+          "planner_id"
         ],
-        "title": "AuthenticatedPrincipalResponse",
+        "title": "PlannerPrincipalResponse",
         "type": "object"
       },
       "ProblemResponse": {
@@ -120,7 +108,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthenticatedPrincipalResponse"
+                  "$ref": "#/components/schemas/PlannerPrincipalResponse"
                 }
               }
             },
